[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'hdrbg'
version = '1.0.0'
authors = [
    { name='Vishal Pankaj Chandratreya' },
]
description = 'Python API for a C implementation of Hash DRBG, a cryptographically secure pseudorandom number generator'
readme = "README.md"
requires-python = ">=3.8"
license = {'file' = 'COPYING.md'}
classifiers = [
    'Programming Language :: Python :: 3',
    'Operating System :: OS Independent',
]

[project.urls]
'Homepage' = 'https://github.com/tfpf/hash-drbg'
'Bug Tracker' = 'https://github.com/tfpf/hash-drbg/issues'
